added some flora

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,12 @@
 {
-  "cSpell.words": ["Bacto", "Wobbledog", "wobbledogs"]
+  "cSpell.words": [
+    "bacto",
+    "bactocalcia",
+    "Canem",
+    "Caseus",
+    "Caudi",
+    "Labo",
+    "wobbledog",
+    "wobbledogs"
+  ]
 }
