added most known data

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,30 @@
     "Canem",
     "Caseus",
     "Caudi",
+    "Clisotrium",
+    "contrarialius",
+    "crysalia",
+    "Crystalized",
+    "Dropilia",
+    "ectobacter",
+    "enteria",
+    "Enterica",
+    "ferulia",
+    "Incognia",
     "Labo",
+    "Latriphilius",
+    "Lucium",
+    "Luxillium",
+    "magnilium",
+    "Mirabilis",
+    "Neutralia",
+    "peptocoli",
+    "Phenobacti",
+    "Phriole",
+    "Planum",
+    "protrusia",
+    "Ratium",
+    "scaph",
     "wobbledog",
     "wobbledogs"
   ]
