--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "watch": "rollup -c -w",
-    "generate images": "py src/images.py"
+    "generate images": "python3 src/images.py"
   },
   "keywords": [],
   "author": "",
