--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
   "cSpell.words": [
+    "Auro",
     "bacto",
     "bactocalcia",
+    "Calphus",
     "Canem",
     "Caseus",
     "Caudi",
@@ -14,6 +16,7 @@
     "enteria",
     "Enterica",
     "ferulia",
+    "frumentium",
     "iife",
     "Incognia",
     "Labo",
@@ -21,6 +24,7 @@
     "Lucium",
     "Luxillium",
     "magnilium",
+    "Minimillius",
     "Mirabilis",
     "Neutralia",
     "peptocoli",
