added flora, food and effects

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,10 @@
     "Canem",
     "Caseus",
     "Caudi",
+    "churro",
+    "clarabacto",
     "Clisotrium",
+    "Compactium",
     "contrarialius",
     "crysalia",
     "Crystalized",
@@ -17,9 +20,11 @@
     "Enterica",
     "ferulia",
     "frumentium",
+    "Hyphacamphi",
     "iife",
     "Incognia",
     "Labo",
+    "latallius",
     "Latriphilius",
     "Lucium",
     "Luxillium",
@@ -28,6 +33,7 @@
     "Mirabilis",
     "Neutralia",
     "peptocoli",
+    "perdictus",
     "Phenobacti",
     "Phriole",
     "Planum",
@@ -35,6 +41,9 @@
     "protrusia",
     "Ratium",
     "scaph",
+    "scilistus",
+    "Testabacti",
+    "viridium",
     "wobbledog",
     "wobbledogs"
   ]
