--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,8 +29,10 @@
     "Lucium",
     "Luxillium",
     "magnilium",
+    "masticillus",
     "Minimillius",
     "Mirabilis",
+    "mochi",
     "Neutralia",
     "peptocoli",
     "perdictus",
