--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
     "contrarialius",
     "corndog",
     "cornucilli",
+    "craveable",
     "crysalia",
     "Crystalized",
     "Dropilia",
@@ -22,6 +23,7 @@
     "enteria",
     "Enterica",
     "ferulia",
+    "Fructo",
     "frumentium",
     "Hyphacamphi",
     "iife",
@@ -39,6 +41,7 @@
     "Neutralia",
     "peptocoli",
     "perdictus",
+    "periculli",
     "Phenobacti",
     "Phriole",
     "Planum",
