adding some things I had missed

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,7 +15,7 @@
     "corndog",
     "cornucilli",
     "craveable",
-    "crysalia",
+    "crysilia",
     "Crystalized",
     "Dropilia",
     "ectobacter",
